<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".update">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/upuser"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/et_userName"
                    android:layout_width="0dp"
                    android:layout_weight="11"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent"
                    android:inputType="text"
                    android:padding="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:enabled="false"/>

                <ImageButton
                    android:id="@+id/imgbtn_uName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/transparent"
                    android:padding="4dp"
                    android:src="@drawable/edit_button" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/et_userEmail"
                    android:layout_width="0dp"
                    android:layout_weight="11"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent"
                    android:inputType="textEmailAddress"
                    android:padding="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:enabled="false"/>

                <ImageButton
                    android:id="@+id/imgbtn_uEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/transparent"
                    android:padding="4dp"
                    android:src="@drawable/edit_button" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psw"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/et_userPsw"
                    android:layout_width="0dp"
                    android:layout_weight="11"
                    android:layout_height="wrap_content"
                    android:background="@drawable/transparent"
                    android:inputType="none"
                    android:padding="4dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:enabled="false"/>

                <ImageButton
                    android:id="@+id/imgbtn_uPsw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/transparent"
                    android:padding="4dp"
                    android:src="@drawable/edit_button" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/border_blue"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>